[package]
name = "hcproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.210", features = ["derive"] }
algorithm = "0.1.13"

[dev-dependencies]
serde = { version = "1", features = ["rc"] }
serde_derive = "1"